# height_map

./: CMakeLists.txt  README.md  package.xml
config/: plane_visualization_test.rviz  test_view.rviz
include/height_map/: arrange_hull_points.hpp  generate_height_map.cpp  generate_height_map.hpp  mapping_height_map.cpp  mapping_height_map.hpp  test.cpp
src/: arrange_hull_points_node.cpp  cam_tf_bc.cpp  concave_hull_test_node.cpp  debug_node.cpp  height_map_node.cpp  local_height_map_241125_back.cpp  local_height_map_backup.cpp  local_height_map_node.cpp  local_height_map_node_241126_backup.cpp  local_plane_map_node.cpp  plane_visualization_test.rviz  testing_height_interpolation_node.cpp
